fixed horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 	line-height: 1.5em;
 	font-family: 'Roboto', sans-serif;
 	letter-spacing: .5px;
+	    max-width: 100%;
+
 }
 
 
@@ -14,7 +16,6 @@
 
 #hero{
 	height: 100vh;
-	width: 100%;
 }
 
 .intro{
@@ -47,8 +48,6 @@
 
 .cover-text{
 	float: right;
-	width: 34em;
-	height: 17em;
 	font-size: 20px;
 	bottom: 0;
 	right: 0;
